@@ -1,3 +1,9 @@
+2011-01-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/47476
+	* semantics.c (potential_constant_expression_1): Handle
+	TRUTH_XOR_EXPR.
+
 2011-01-26  Dave Korn  <dave.korn.cygwin@gmail.com>
 
 	PR c++/43601
